--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ archives_base_name = justmap
 fabric_version = 0.25.1+build.416-1.16
 cloth_version = 4.8.1
 modmenu_version = 1.14.6+build.31
+databreaker_version = f072a81fbd26e4978b687414a21f1ea4a0077c15
