--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs = -Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version = 1.16.4
+minecraft_version = 1.16.5
 yarn_mappings = 1
-loader_version = 0.10.6+build.214
+loader_version = 0.11.3
 
 mod_version = 1.0.0
 archives_base_name = justmap
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-fabric_version = 0.25.1+build.416-1.16
+fabric_version = 0.34.6+1.16
 cloth_version = 4.8.1
 modmenu_version = 1.14.6+build.31
 databreaker_version = f072a81fbd26e4978b687414a21f1ea4a0077c15
